syntax = "proto3";

option go_package = "/api";

message OriginalURL {
    string URL = 1;
}

message ShortenedURL {
    string ShortURL = 1;
}

service URLShortener {
    rpc CreateShortURL(OriginalURL) returns (ShortenedURL);
    rpc GetOriginalURL(ShortenedURL) returns (OriginalURL);
}